<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rgWithdraw"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbwithdrawAtm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbWithdrawAtm"
            />

        <RadioButton
            android:id="@+id/rbwithdrawVisa"
            android:layout_marginLeft="20px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbWithdrawVisa"
            />

    </RadioGroup>
    <RadioGroup
        android:id="@+id/rgWithdrawPos"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbWithdrawLocalPos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbWithdrawLocalPos"
            />

        <RadioButton
            android:id="@+id/rbWithdrawBroadPos"
            android:layout_marginLeft="20px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbWithdrawBroadPos"
            />

    </RadioGroup>

</LinearLayout>