<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginLeft="30px"
        android:layout_marginTop="300px"
        android:hint="@string/txtMasterPassword"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logIn"
        android:layout_marginTop="30px"
        android:layout_marginLeft="250px"
        android:text="@string/btnLogIn"
        android:layout_below="@+id/txtPassword"
        />
    <TextView
        android:id="@+id/tvConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvConnection"
        android:layout_marginTop="100px"
        android:layout_alignParentTop="true"
        android:textSize="50px"
        android:background="#f00"
        android:textColor="#ff0"
        />

</RelativeLayout>
